// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/card/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
    style="width:300px"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Default size card
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="#"
          >
            More
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered ant-card-small"
    style="width:300px"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Small size card
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="#"
          >
            More
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/border-less.md correctly 1`] = `
<div
  style="background:#ECECEC;padding:30px"
>
  <div
    class="ant-card"
    style="width:300px"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Card title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/flexible-content.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-hoverable"
  style="width:240px"
>
  <div
    class="ant-card-cover"
  >
    <img
      alt="example"
      src="https://os.alipayobjects.com/rmsportal/QBnOOoLaAfKPirc.png"
    />
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-card-meta"
    >
      <div
        class="ant-card-meta-detail"
      >
        <div
          class="ant-card-meta-title"
        >
          Europe Street beat
        </div>
        <div
          class="ant-card-meta-description"
        >
          www.instagram.com
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/grid-card.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-contain-grid"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Card Title
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="ant-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/in-column.md correctly 1`] = `
<div
  style="background:#ECECEC;padding:30px"
>
  <div
    class="ant-row"
    style="margin-left:-8px;margin-right:-8px"
  >
    <div
      class="ant-col ant-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          Card content
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          Card content
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          Card content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/inner.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Card title
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <p
      style="font-size:14px;color:rgba(0, 0, 0, 0.85);margin-bottom:16px;font-weight:500"
    >
      Group title
    </p>
    <div
      class="ant-card ant-card-bordered ant-card-type-inner"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Inner Card title
          </div>
          <div
            class="ant-card-extra"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        Inner Card content
      </div>
    </div>
    <div
      class="ant-card ant-card-bordered ant-card-type-inner"
      style="margin-top:16px"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Inner Card title
          </div>
          <div
            class="ant-card-extra"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        Inner Card content
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/loading.md correctly 1`] = `
<div>
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <span
      class="ant-switch-inner"
    />
  </button>
  <div
    class="ant-card ant-card-loading ant-card-bordered"
    style="width:300px;margin-top:16px"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-card-loading-content"
      >
        <div
          class="ant-row"
          style="margin-left:-4px;margin-right:-4px"
        >
          <div
            class="ant-col ant-col-22"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left:-4px;margin-right:-4px"
        >
          <div
            class="ant-col ant-col-8"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-15"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left:-4px;margin-right:-4px"
        >
          <div
            class="ant-col ant-col-6"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-18"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left:-4px;margin-right:-4px"
        >
          <div
            class="ant-col ant-col-13"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-9"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left:-4px;margin-right:-4px"
        >
          <div
            class="ant-col ant-col-4"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-3"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-16"
            style="padding-left:4px;padding-right:4px"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered"
    style="width:300px;margin-top:16px"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-skeleton ant-skeleton-with-avatar ant-skeleton-active"
      >
        <div
          class="ant-skeleton-header"
        >
          <span
            class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
          />
        </div>
        <div
          class="ant-skeleton-content"
        >
          <h3
            class="ant-skeleton-title"
            style="width:50%"
          />
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
            <li />
          </ul>
        </div>
      </div>
    </div>
    <ul
      class="ant-card-actions"
    >
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-setting-o"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-edit-o"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-ellipsis-o"
              />
            </svg>
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/card/demo/meta.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:300px"
>
  <div
    class="ant-card-cover"
  >
    <img
      alt="example"
      src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png"
    />
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-card-meta"
    >
      <div
        class="ant-card-meta-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </div>
      <div
        class="ant-card-meta-detail"
      >
        <div
          class="ant-card-meta-title"
        >
          Card title
        </div>
        <div
          class="ant-card-meta-description"
        >
          This is the description
        </div>
      </div>
    </div>
  </div>
  <ul
    class="ant-card-actions"
  >
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <span
          class="anticon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-setting-o"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <span
          class="anticon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-edit-o"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <span
          class="anticon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-ellipsis-o"
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/card/demo/simple.md correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:300px"
>
  <div
    class="ant-card-body"
  >
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`renders ./components/card/demo/tabs.md correctly 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-contain-tabs"
    style="width:100%"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Card title
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="#"
          >
            More
          </a>
        </div>
      </div>
      <div
        class="ant-tabs ant-tabs-top ant-card-head-tabs ant-tabs-large ant-tabs-line"
      >
        <div
          class="ant-tabs-bar ant-tabs-top-bar ant-tabs-large-bar"
          role="tablist"
          tabindex="0"
        >
          <div
            class="ant-tabs-nav-container"
          >
            <span
              class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-prev-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left ant-tabs-tab-prev-icon-target"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    style="vertical-align:-0.125em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <span
              class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-next-icon"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right ant-tabs-tab-next-icon-target"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    style="vertical-align:-0.125em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-scroll"
              >
                <div
                  class="ant-tabs-nav ant-tabs-nav-animated"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      aria-selected="true"
                      class="ant-tabs-tab-active ant-tabs-tab"
                      role="tab"
                    >
                      tab1
                    </div>
                    <div
                      aria-disabled="false"
                      aria-selected="false"
                      class=" ant-tabs-tab"
                      role="tab"
                    >
                      tab2
                    </div>
                  </div>
                  <div
                    class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        <div
          class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
          style="margin-left:0%"
        >
          <div
            aria-hidden="false"
            class="ant-tabs-tabpane ant-tabs-tabpane-active"
            role="tabpanel"
          >
            <div
              role="presentation"
              style="width:0;height:0;overflow:hidden;position:absolute"
              tabindex="0"
            />
            <div
              role="presentation"
              style="width:0;height:0;overflow:hidden;position:absolute"
              tabindex="0"
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
            role="tabpanel"
          />
        </div>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        content1
      </p>
    </div>
  </div>
  <br />
  <br />
  <div
    class="ant-card ant-card-bordered ant-card-contain-tabs"
    style="width:100%"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      />
      <div
        class="ant-tabs ant-tabs-top ant-card-head-tabs ant-tabs-large ant-tabs-line"
      >
        <div
          class="ant-tabs-bar ant-tabs-top-bar ant-tabs-large-bar"
          role="tablist"
          tabindex="0"
        >
          <div
            class="ant-tabs-nav-container"
          >
            <span
              class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-prev-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left ant-tabs-tab-prev-icon-target"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    style="vertical-align:-0.125em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <span
              class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-next-icon"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right ant-tabs-tab-next-icon-target"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    style="vertical-align:-0.125em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-scroll"
              >
                <div
                  class="ant-tabs-nav ant-tabs-nav-animated"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      aria-selected="false"
                      class=" ant-tabs-tab"
                      role="tab"
                    >
                      article
                    </div>
                    <div
                      aria-disabled="false"
                      aria-selected="true"
                      class="ant-tabs-tab-active ant-tabs-tab"
                      role="tab"
                    >
                      app
                    </div>
                    <div
                      aria-disabled="false"
                      aria-selected="false"
                      class=" ant-tabs-tab"
                      role="tab"
                    >
                      project
                    </div>
                  </div>
                  <div
                    class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        <div
          class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
          style="margin-left:-100%"
        >
          <div
            aria-hidden="true"
            class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
            role="tabpanel"
          />
          <div
            aria-hidden="false"
            class="ant-tabs-tabpane ant-tabs-tabpane-active"
            role="tabpanel"
          >
            <div
              role="presentation"
              style="width:0;height:0;overflow:hidden;position:absolute"
              tabindex="0"
            />
            <div
              role="presentation"
              style="width:0;height:0;overflow:hidden;position:absolute"
              tabindex="0"
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
            role="tabpanel"
          />
        </div>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        app content
      </p>
    </div>
  </div>
</div>
`;
